--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,33 @@ set(CMAKE_BUILD_TYPE RelWithDebInfo)
 
 find_package(catkin REQUIRED COMPONENTS
   roscpp
+  std_msgs
+  tf
+  geometry_msgs
+)
+
+add_message_files(
+  FILES
+  Menu.msg
+  Product.msg
+  Shop.msg
+)
+
+add_service_files(
+   FILES
+   GetMenu.srv
+   GetShopsList.srv
+)
+
+generate_messages(
+  DEPENDENCIES
+  std_msgs
 )
 
 catkin_package(
   INCLUDE_DIRS include
   LIBRARIES ${PROJECT_NAME}
-  CATKIN_DEPENDS roscpp
+  CATKIN_DEPENDS roscpp std_msgs geometry_msgs
 )
 
 include_directories(
@@ -19,6 +40,7 @@ include_directories(
   ${catkin_INCLUDE_DIRS}
   ${CPR_INCLUDE_DIRS}
 )
+
 
 SET(USE_SYSTEM_GTEST ON)
 SET(BUILD_CPR_TESTS OFF)
@@ -45,6 +67,7 @@ target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${CPR_LIBRARIES} nlohm
 #   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 #)
+
 
 add_executable(coffee_shop_delivery src/coffee_shop_delivery.cpp)
 add_dependencies(coffee_shop_delivery ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
